DTS: ARM: support for several Goodwin boards
This patch adds devicetree descriptions for Goodwin RGW1.0, TGW2.0 and GT-9.1
boards.

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -38,7 +38,11 @@ dtb-$(CONFIG_SOC_SAM_V4_V5) += \
 	at91sam9g25ek.dtb \
 	at91sam9g35ek.dtb \
 	at91sam9x25ek.dtb \
-	at91sam9x35ek.dtb
+	at91sam9x35ek.dtb \
+	goodwin-gt-9.1.dtb \
+	goodwin-rgw-1.0.dtb \
+	goodwin-tgw-2.0.dtb
+
 dtb-$(CONFIG_SOC_SAM_V7) += \
 	at91-kizbox2.dtb \
 	at91-sama5d2_xplained.dtb \
