ARM: AT91: support for Goodwin TGW-1.5 board
It's not possible to configure memory controller and reset external MAC
using only devicetree, so I'd to create board .c file with initialization
sequence for the MAC.

--- a/arch/arm/mach-at91/Makefile
+++ b/arch/arm/mach-at91/Makefile
@@ -18,3 +18,5 @@ endif
 ifeq ($(CONFIG_PM_DEBUG),y)
 CFLAGS_pm.o += -DDEBUG
 endif
+
+obj-$(CONFIG_MACH_GOODWIN_EXT_MAC_DT)	+= board-goodwin-extmac.o
