--- a/arch/arm/mach-at91/Kconfig
+++ b/arch/arm/mach-at91/Kconfig
@@ -97,6 +97,23 @@ config COMMON_CLK_AT91
 	bool
 	select COMMON_CLK
 
+config MACH_GOODWIN_EXT_MAC_DT
+	bool "Goodwin boards with ethernet mac attached to CPU bus"
+	depends on SOC_AT91SAM9
+	select USE_OF
+	help
+	  Select this if you want to experiment device-tree with
+	  an Atmel Evaluation Kit.
+
+config MACH_SAMA5_DT
+	bool "Atmel SAMA5 Evaluation Kits with device-tree support"
+	depends on SOC_SAMA5
+	select USE_OF
+	select PHYLIB if NETDEVICES
+	help
+	  Select this if you want to experiment device-tree with
+	  an Atmel Evaluation Kit.
+
 config HAVE_AT91_SMD
 	bool
 
