ARM: DTS: description for Goodwin ATGW1.2 board

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -43,7 +43,8 @@ dtb-$(CONFIG_SOC_SAM_V4_V5) += \
 	goodwin-rgw-1.0.dtb \
 	goodwin-tgw-1.5.dtb \
 	goodwin-tgw-2.0.dtb \
-        goodwin-ptgw-1.0.dtb
+        goodwin-ptgw-1.0.dtb \
+	goodwin-atgw-1.2.dtb
 
 dtb-$(CONFIG_SOC_SAM_V7) += \
 	at91-kizbox2.dtb \
